--- a/style.css
+++ b/style.css
@@ -1,4 +1,25 @@
+* {
+    font-family: 'Roboto', sans-serif;
+}
+
 .container {
+    max-width: 1175px;
     margin: 0 auto;
-    
+}
+
+header {
+    text-align: center;
+}
+
+li {
+    list-style-type: none;
+}
+
+li>h1 {
+    text-align: center;
+}
+
+img {
+    width: 150px;
+    margin: 50px;
 }
