--- a/style.css
+++ b/style.css
@@ -23,3 +23,10 @@ img {
     width: 120px;
     margin: 25px;
 }
+
+.scale {
+    transition: 1s; /* Время эффекта */
+   }
+   .scale:hover {
+    transform: scale(1.2); /* Увеличиваем масштаб */
+   }
