добавил новый функционал и картинку фона

--- a/style.css
+++ b/style.css
@@ -1,14 +1,40 @@
 * {
     font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 .container {
-    max-width: 1175px;
     margin: 0 auto;
+    background-image: url("img/bg2.jpg");
+    background-size: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 100vh;
+    width: 100%;
 }
 
-header {
+.container__instr {
+    max-width: 1140px;
+    margin: 0 auto;
+    margin-top: 20px;
+}
+
+.header {
+    height: 80px;
     text-align: center;
+    padding-top: 0px;
+}
+
+.header__logo {
+    padding-top: 20px;
+}
+
+.main {
+    text-align: center;
+    box-sizing: border-box;
+	min-height: 100%;
+	padding-bottom: 90px;
 }
 
 li {
@@ -19,7 +45,7 @@ li>h1 {
     text-align: center;
 }
 
-img {
+.img {
     width: 100px;
     margin: 25px;
 }
@@ -30,3 +56,13 @@ img {
    .scale:hover {
     transform: scale(1.2); /* Увеличиваем масштаб */
    }
+
+.footer {
+    text-align: center;
+    height: 80px;
+	margin-top: -160px;
+}
+
+.footer__content {
+    padding-top: 15px;
+}
