--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 }
 
 .header {
-    height: 150px;
+    height: 100px;
     text-align: center;
     padding-top: 0px;
 }
@@ -76,6 +76,30 @@ li>h1 {
 	margin-top: -80px;
 }
 
-@media (max-width: 476px) {
+.adaptive-header .mobile-header {
+    display: none;
+  }
+  
+  @media (max-width: 855px) {
+    .adaptive-header .desktop-header {
+      display: none;
+    }
     
-}
+    .adaptive-header .mobile-header {
+      display: block;
+    }
+  }
+
+  @media (max-width: 560px) {
+    .header {
+        height: 50px;
+    }
+    .header__links {
+        display: grid;
+        align-items: start;
+    }
+    .footer {
+        margin-top: 0px;
+    }
+  }
+
