--- a/style.css
+++ b/style.css
@@ -29,6 +29,10 @@ body {
     padding-top: 20px;
 }
 
+/* .header__links {
+    min-width: fit-content;
+} */
+
 .main {
     box-sizing: border-box;
     min-height: 100%;
@@ -46,12 +50,24 @@ body {
     padding-top: 20px;
 }
 
-li {
+.main__instr_item {
     list-style-type: none;
 }
 
-li>h1 {
+.main__instr_item>h1 {
     text-align: center;
+}
+
+.section {
+    max-width: 960px;
+    margin: 0 auto;
+    text-align: left;
+    font-size: 20px;
+    line-height: 140%
+}
+
+.section__list {
+    padding: 15px;
 }
 
 .img {
@@ -81,12 +97,22 @@ li>h1 {
   }
   
   @media (max-width: 855px) {
+    .header {
+        height: 50px;
+    }
     .adaptive-header .desktop-header {
       display: none;
     }
     
     .adaptive-header .mobile-header {
       display: block;
+    }
+    .footer {
+        margin-top: 0px;
+    }
+    .img {
+        width: 120px;
+        margin: 30px;
     }
   }
 
@@ -100,6 +126,10 @@ li>h1 {
     }
     .footer {
         margin-top: 0px;
+    }
+    .img {
+        width: 120px;
+        margin: 20px;
     }
   }
 
