--- a/style.css
+++ b/style.css
@@ -114,6 +114,11 @@ body {
         width: 90px;
         margin: 30px;
     }
+    .section {
+        margin: 0 auto;
+        text-align: justify;
+        font-size: 16px;
+    }
   }
 
   @media (max-width: 560px) {
@@ -126,6 +131,11 @@ body {
     .img {
         width: 70px;
         margin: 20px;
+    }
+    .section {
+        margin: 0 auto;
+        text-align: justify;
+        font-size: 16px;
     }
   }
 
